# main-website

./: .env.example  .gitignore  drizzle.config.ts  eslint.config.mjs  next.config.js  package.json  tailwind.config.js
app/: layout.tsx  page.tsx  providers.tsx
app/api/routes/: route.ts
app/api/routes/[routeId]/: route.ts
app/api/routes/[routeId]/run/: route.ts
app/auth/login/: page.tsx
app/auth/register/: page.tsx
app/auth/reset-password/: page.tsx
app/dashboard/: page.tsx
app/dashboard/[routeId]/: page.tsx
app/dashboard/routes/[routeId]/: page.tsx
components/: auth-guard.tsx  footer.tsx  logout-button.tsx
components/dashboard/: StatsGrid.tsx  create-route-dialog.tsx  edit-route-dialog.tsx  routes-table.tsx  skeleton-route-card.tsx  skeleton-table.tsx
components/emails/: reset-password.tsx
components/landing/: cta-section.tsx  features-section.tsx  hero-section.tsx  stats-section.tsx  testimonials-section.tsx
components/ui/: chart.tsx  dropdown-menu.tsx  select.tsx  table.tsx
db/: schema.ts
drizzle/migrations/: 0000_init.sql
drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
lib/: auth.ts  db.ts  security.ts
prisma/: schema.prisma
prisma/migrations/0_init/: migration.sql  migration.toml
prisma/migrations/20240101000000_fix_cascade/: migration.sql  migration.toml
react-email-starter/: package.json
react-email-starter/emails/: notion-magic-link.tsx  plaid-verify-identity.tsx  stripe-welcome.tsx  vercel-invite-user.tsx
styles/: globals.css
types/: index.ts
worker/: Cargo.toml  README.md
worker/src/: main.rs
