[package]
name = "api-status-tracker-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
dotenv = "0.15.0"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
futures-util = "0.3.29"
time = "0.3.30"
